--- a/voxblox_ros/cfg/voxblox_LMF.yaml
+++ b/voxblox_ros/cfg/voxblox_LMF.yaml
@@ -1,4 +1,4 @@
-world_frame: delta/odometry_sensor1 #world
+world_frame: world
 use_tf_transforms: True
 use_freespace_pointcloud: False #True
 tsdf_voxels_per_side: 16 # Size of the block in voxblox
