--- a/voxblox/package.xml
+++ b/voxblox/package.xml
@@ -15,9 +15,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>catkin_simple</buildtool_depend>
 
-  <depend>eigen_catkin</depend>
-  <depend>eigen_checks</depend>
-  <depend>gflags_catkin</depend>
+  <depend>eigen3</depend>
+  <!-- <depend>eigen_checks</depend> -->
   <depend>glog_catkin</depend>
   <depend>minkindr</depend>
   <!-- This is an OPTIONAL dep! Will use system library if not present. -->
